@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-07T00:42:16Z",
-  "count_outdated" : 248,
-  "uniques_outdated" : 182,
+  "timestamp" : "2025-03-16T00:46:25Z",
+  "count_outdated" : 249,
+  "uniques_outdated" : 183,
   "count" : 250,
   "uniques" : 184,
   "clones" : [
-    {
-      "timestamp": "2025-03-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-06T00:00:00Z",
       "count": 1,
